# computicle

./: CMakeLists.txt
src/: main.cc
src/buffer/vertex/: texture_display_vertex_buffer.cc
src/glfw/: window.cc  window.h
src/shader/code/: display_fragment.glsl  fragment.glsl  vertex.glsl
src/shader/wrap/: compute_shader.cc  metal_compute_shader.h  metal_compute_shader.mm
